fix: horizontal scroll on main page

--- a/public/common/main_page.css
+++ b/public/common/main_page.css
@@ -4,6 +4,7 @@
 /* main part of site */
 body {
     background-color: var(--bg-secondary);
+    overflow-x: hidden;
 }
 
 #main-page {
